Fixed button spacing on homepage

--- a/src/App.css
+++ b/src/App.css
@@ -160,6 +160,10 @@ h1.home-title .lead {
   font-size: 1.5rem;
 }
 
+.home-btn-spacing {
+	margin: 15px 0 40px;
+}
+
 /** Treatment options accordion **/
 .accordion {
 	margin: 30px 0 60px;
